--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipes/chili.html">Easy 5 ingredient chili</a>
+    <p><a href="recipes/chili.html">Easy 5 ingredient chili</a></p>
+    <p><a href="recipes/chicken-wraps.html">Easy Chicken Lettuce Wraps</a></p>
+    <p><a href="recipes/chili.html">Easy 5 ingredient chili</a></p>
 </body>
 </html>
