fix: chicken wrap image was broken

--- a/recipes/chicken-wraps.html
+++ b/recipes/chicken-wraps.html
@@ -1,5 +1,5 @@
 <h1>Easy Chicken Lettuce Wraps</h1>
-<img src="./img/chicken-wraps.jpg" alt="chicken lettuce wraps recipe" width="300">
+<img src="./img/chicken-wraps.webp" alt="chicken lettuce wraps recipe" width="300">
 <h2>Description</h2>
 <p>These chicken lettuce wraps are made with shredded roast chicken, carrots, water chestnuts, and a creamy Asian-style dressing. They're easy to prepare, refreshing, and great for summer nights when you don't want to cook.</p>
 <h2>Ingredients</h2>
