feat: add peanut butter recipe page with details

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Odin recipes</h1>
     <p><a href="recipes/chili.html">Easy 5 ingredient chili</a></p>
     <p><a href="recipes/chicken-wraps.html">Easy Chicken Lettuce Wraps</a></p>
-    <p><a href="recipes/chili.html">Easy 5 ingredient chili</a></p>
+    <p><a href="recipes/mousse.html">Peanut Butter Mousse</a></p>
 </body>
 </html>
